...
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/hint_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.solumath.ncalc.view.ResizingEditText
                            android:id="@+id/edit_input"
                            style="@style/EditTextSolve"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>
...
